[build-system]
requires = ["maturin>=0.12,<0.13", "cffi"]
build-backend = "maturin"

[project]
name = "csx64"
version = "0.1.0"
requires-python = ">=3.6"
dependencies = ["cffi"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
"Source Code" = "https://github.com/dragazo/pycsx64"
Issues = "https://github.com/dragazo/pycsx64/issues"
